welcome.lessons.welcome.bat.bool2.SortaSum.scala.error
sortaSum:3: error: ';' expected but '=' found.
	VAR C:Int = 0
                  ^